Fix: footer
The footer was disrupting the rest of the site when on mobile devices

The left side of its padding was overflowing into the site's body.

Adding media queries to apply different padding sizes when on different devices fixed the issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -411,8 +411,17 @@ body {
 
 /* CONTACT FOOTER */
 
-footer .jumbotron {
-    padding: 10rem;
+@media (max-width:768px) {
+    footer .jumbotron {
+        padding: 4rem;
+    }
 }
+
+@media (min-width:1024px) {
+    footer .jumbotron {
+        padding: 10rem;
+    }
+}
+
 
 /* CONTACT FOOTER */
